# rl-tidbits

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  deploy.sh  environment.yml  eval.py  explicit_train.py  inspect_ckpt.py  main.py  pyproject.toml  test_training.py  tune.py
agents/: __init__.py  training.py  wrappers.py
docs/: marl_research.md
jax_boids/: __init__.py  analyze_run.py  analyze_sweep.py  collector.py  configs.py  demo.py  diagnose.py  diagnostic.py  networks.py  ppo.py  run_curriculum.py  run_diagnostics.py  run_fine_tuning_sweep.py  run_incremental.py  run_large_sweep.py  run_random_sweep.py  run_sweep.py  run_training.py  test_advantage.py  test_bootstrap_computation.py  test_env.py  test_gradients.py  test_learning.py  test_policy_actions.py  test_ppo_update.py  test_sanity.py  test_value_convergence.py  test_value_update.py  train.py  train_curriculum.py  train_ippo.py  train_single.py  validate_configs.py  visualize.py  visualize_trained.py
jax_boids/envs/: __init__.py  boids.py  curriculum.py  predator_prey.py  rewards.py  types.py
jax_boids/telemetry/: __init__.py  __main__.py  diagnostics.py  reader.py
testing/: test_bootstrap_computation.py  test_original_env.py  test_ppo_update.py  test_training.py  test_value_update.py  test_wrapping.py
tests/: conftest.py  test_advantage.py  test_env.py  test_gradients.py  test_learning.py  test_policy_actions.py  test_ppo_update.py  test_sanity.py  test_value_update.py  test_wrapping.py
