[project]
name = "rl-tidbits"
version = "0.1.0"
description = "Reinforcement learning experiments and agents"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "gymnasium>=1.0",
    "gymnasium[mujoco]>=1.0",
    "mujoco>=3.0",
    "torch>=2.0",
    "stable-baselines3>=2.0",
    "tensorboard>=2.0",
    "optuna>=3.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
