[project]
name = "rl-tidbits"
version = "0.1.0"
description = "JAX-based multi-agent reinforcement learning experiments"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "jax[cuda12]>=0.4.30",
    "flax>=0.8.4",
    "optax>=0.2.2",
    "chex>=0.1.86",
    "distrax>=0.1.2",
    "orbax-checkpoint>=0.5.0",
    "matplotlib>=3.8",
    "imageio>=2.34",
    "imageio[ffmpeg]>=0.5",
    "tensorboardX>=2.6",
    "pandas>=2.0",
    "tbparse>=0.0.7",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
pythonpath = ["."]
